letchik-django-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: django-app-deployment
  labels:
    app: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: localhost:5001/django-example-app:latest
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
          ports:
          - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
---
